--- a/Vidly/Vidly/packages.config
+++ b/Vidly/Vidly/packages.config
@@ -33,7 +33,8 @@
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
