Adding fields to existing Application user.

--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -277,6 +277,10 @@
     <Compile Include="Migrations\201811021543030_SeedUsers.Designer.cs">
       <DependentUpon>201811021543030_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811050344599_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201811050344599_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201811050344599_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CheckIfEighteen.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -580,6 +584,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811021543030_SeedUsers.resx">
       <DependentUpon>201811021543030_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811050344599_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201811050344599_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
