--- a/Vidly/Vidly/packages.config
+++ b/Vidly/Vidly/packages.config
@@ -35,12 +35,13 @@
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Facebook" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
