--- a/Vidly/Vidly/packages.config
+++ b/Vidly/Vidly/packages.config
@@ -5,6 +5,11 @@
   <package id="bootbox" version="4.3.0" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net461" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net461" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net461" />
+  <package id="Glimpse.EF6" version="1.6.5" targetFramework="net461" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.11" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
@@ -45,6 +50,8 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
+  <package id="toastr" version="2.1.1" targetFramework="net461" />
+  <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="8.0.1" targetFramework="net461" />
 </packages>
